--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "Scrim-s06ivm6",
+  "homepage": "https://camelia-osan.github.io/Meme-Generator",
+  "name": "meme-generator",
   "description": "https://scrimba.com/learn-react-c0e/~06iy/s0pl3vq3tv/head",
   "scripts": {
     "start": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
